# skillmodels

./: .azure-pipelines.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  MEMTRACKER.md  README.md  codecov.yml  conda_build_config.yaml  dev_env.yml  environment.yml  meta.yaml  pyproject.toml  readthedocs.yml  release.py  run_test.py  setup.py  tox.ini
.conda/: meta.yaml
.github/workflows/: continuous-integration-workflow.yml  main.yml
docs/: Makefile  environment.yml  make.bat
docs/source/: basic_usage.rst  chs_test_params.csv  conf.py  estimation.rst  fast_routines.rst  index.rst  introduction.rst  model_functions.rst  model_specs.rst  names_and_concepts.rst  notes_on_factor_scales.rst  pre_processing.rst  requirements.txt  rtd_environment.yml  start_params.csv  start_params_template.csv  test_model2.json  tutorial.ipynb
docs/source/explanations/: index.rst  names_and_concepts.rst  notes_on_factor_scales.rst
docs/source/getting_started/: how to decompose variance.ipynb  how_to_visualize_pairwise_factor_distribution.ipynb  how_to_visualize_transition_equations.ipynb  index.rst  tutorial.ipynb
docs/source/how_to_guides/: how_to_simulate_dataset.ipynb  how_to_visualize_changes_in_pairwise_factor_distributions.ipynb  how_to_visualize_correlations.ipynb  how_to_visualize_pairwise_factor_distribution.ipynb  how_to_visualize_transition_equations.ipynb  index.rst  model_specs.rst  test_model2.json  utilities.rst
docs/source/reference_guides/: endogeneity_corrections.rst  estimation.rst  index.rst  pre_processing.rst  simulation.rst  (+1 more)
skillmodels/: __init__.py  check_model.py  check_model_jax.py  clipping.py  config.py  constraints.py  constraints_jax.py  correlation_heatmap.py  decorators.py  elliptical_functions_jax.py  filtered_states.py  kalman_filters.py  kalman_filters_jax.py  likelihood_function.py  likelihood_function_jax.py  params_index.py  params_index_jax.py  parse_params.py  process_data.py  process_debug_data.py  process_model.py  process_model_jax.py  simulate_data.py  simulate_data_jax.py  transition_functions.py  utilities.py  variance_decomposition.py  visualize_correlation_heatmap.py  visualize_factor_distributions.py  visualize_measurement_correlations.py  visualize_measurement_heatmap.py  visualize_transition_equations.py
skillmodels.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
skillmodels/estimation/: chs_model.py  chs_model_results.py  likelihood_function.py  parse_params.py  skill_model.py  skill_model_results.py  wa_functions.py
skillmodels/fast_routines/: choldate.py  kalman_filters.py  numba_kalman_filters.py  numpy_kalman_filters.py  qr_decomposition.py  sigma_points.py  transform_sigma_points.py
skillmodels/model_functions/: anchoring_functions.py  endogeneity_functions.py  transition_functions.py
skillmodels/pre_processing/: constraints.py  data_processor.py  model_spec_processor.py  params_index.py
skillmodels/simulation/: _elliptical_functions.py  _simulate_elliptical.py  mff_np.pickle  mff_pd.pickle  mff_reg.pickle  missings_signature.py  missings_signature_numpy.py  npf_reg.pickle  simdata_pd.pickle  simulate_data.py
skillmodels/tests/: conftest.py  model2.yaml  model2_correct_params_index.csv  model2_correct_update_info.csv  model2_simulated_data.dta  test_clipping.py  test_constraints.py  test_constraints_jax.py  test_correlation_heatmap.py  test_decorators.py  test_filtered_states.py  test_kalman_filters.py  test_kalman_filters_jax.py  test_likelihood_function.py  test_likelihood_regression.py  test_likelihood_regression_jax.py  test_params_index.py  test_params_index_jax.py  test_parse_params.py  test_parse_params_jax.py  test_process_data.py  test_process_data_jax.py  test_process_model.py  test_process_model_jax.py  test_simulate_data.py  test_simulate_data_jax.py  test_transition_functions.py  test_transition_functions_jax.py  test_utilities.py  test_variance_decomposition.py  test_visualize_correlation_heatmap.py  test_visualize_factor_distributions.py  test_visualize_measurement_correlations.py  test_visualize_transition_equations.py
skillmodels/visualization/: plot_functions.py  preamble.tex  table_functions.py  text_functions.py
src/skillmodels/: __init__.py  check_model.py  clipping.py  config.py  constraints.py  correlation_heatmap.py  decorators.py  filtered_states.py  kalman_filters.py  kalman_filters_debug.py  likelihood_function.py  likelihood_function_debug.py  maximization_inputs.py  params_index.py  parse_params.py  process_data.py  process_debug_data.py  process_model.py  simulate_data.py  transition_functions.py  utilities.py  utils_plotting.py  visualize_factor_distributions.py  visualize_transition_equations.py
tests/: model2.yaml  model2_with_inv_correct_update_info.csv  test_clipping.py  test_constraints.py  test_correlation_heatmap.py  test_decorators.py  test_filtered_states.py  test_kalman_filters.py  test_likelihood_function.py  test_likelihood_regression.py  test_maximization_inputs.py  test_params_index.py  test_parse_params.py  test_process_data.py  test_process_model.py  test_simulate_data.py  test_transition_functions.py  test_utilities.py  test_visualize_factor_distributions.py  test_visualize_transition_equations.py
tests/estimation/: chs_model.py  chs_model_test.py  no_squares_translog_model.json  parse_params_test.py  skill_model_test.py  translog_model.json  wa_functions_test.py  wa_test_with_no_squares_translog_model.py
tests/fast_routines/: choldate_test.py  kalman_filters_test.py  numba_kalman_filters_test.py  numpy_kalman_filters_test.py  qr_decomposition_test.py  sigma_points_from_filterpy.json  sigma_points_test.py  transform_sigma_points_test.py
tests/model_functions/: transition_functions_test.py
tests/pre_processing/: data_processor_test.py  model_spec_processor_test.py
tests/regression_vault/: chs_results.csv  no_stages_anchoring_result.json  one_stage_anchoring_custom_functions.csv  one_stage_anchoring_custom_functions_result.json  one_stage_result.json  two_stages_anchoring.csv  two_stages_anchoring_result.json
(+56 files in other folders)
